[tool.poetry]
name = "dev01"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openai = "^1.57.4"
jupyter = "^1.1.1"
docker = "^7.1.0"
dill = "^0.3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
